# ruff-example-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml
src/: main.py  utils.py
tests/: test_main.py  test_utils.py
